--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
   <meta charset="UTF-8">
@@ -10,7 +10,6 @@
 
 <body>
   <div id="root"></div>
-  <script src="./index.js"></script>
 </body>
 
 </html>
